# Robot_AI

./: README.md  platformio.ini
ESP32_Master/: CMakeLists.txt  README.md
ESP32_Master/components/audio_aec/: CMakeLists.txt  audio_aec.c
ESP32_Master/components/audio_capture/: CMakeLists.txt  audio_capture.c
ESP32_Master/components/audio_codec_opus/: CMakeLists.txt  audio_codec_opus.c  idf_component.yml
ESP32_Master/components/audio_pipeline/: CMakeLists.txt  audio_pipeline.c
ESP32_Master/components/audio_playback/: CMakeLists.txt  audio_playback.c
ESP32_Master/components/audio_transport/: CMakeLists.txt  audio_transport.c
ESP32_Master/components/robot_connectivity/: CMakeLists.txt  db.c  dto_build.c  dto_parse.c  esp_ble.c  gatt_svr.c  html.c  robot_connectivity.c  wifi.c  ws_client.c
ESP32_Master/components/robot_connectivity/include/: bleprph.h  cmn.h  db.h  dto_ws.h  esp_ble.h  html.h  robot_connectivity.h  wifi.h
ESP32_Master/main/: CMakeLists.txt  idf_component.yml  main.c
ESP32_Slave/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
ESP32_Slave/main/: CMakeLists.txt  cmn.h  crc.c  crc.h  esp_lcd_panel_st7796.c  esp_lcd_panel_st7796.h  gif_player.c  gif_player.h  i2c_slave_drv.c  i2c_slave_drv.h  idf_component.yml  main.c  sd_card.c  sd_card.h  uart_drv.c  uart_drv.h
ESP32_Slave/tools/: convert_gif_to_gpf.py  gif_1.gpf
include/: ai_client.h  audio_recorder.h  config.h  display_manager.h  emotion.h  wifi_manager.h
src/: ai_client.cpp  audio_recorder.cpp  display_manager.cpp  emotion.cpp  main.cpp  wifi_manager.cpp
(+7 files in other folders)
